--- a/package.json
+++ b/package.json
@@ -1,4 +1,17 @@
 {
+  "name": "three-uilas-website",
+  "version": "1.0.0",
+  "description": "Three Uilas - Electric Farm Utility Vehicles Website",
+  "scripts": {
+    "build": "npm run build:css && npm run copy:assets && npm run copy:html",
+    "build:css": "tailwindcss -i src/index.css -o dist/index_output.css",
+    "copy:assets": "cp -r assets dist/ && cp src/script.js dist/",
+    "copy:html": "cp src/index.html dist/ && sed -i '' 's|../dist/|./|g; s|../assets/|./assets/|g' dist/index.html",
+    "watch": "tailwindcss -i src/index.css -o dist/index_output.css --watch",
+    "serve": "cd dist && python3 -m http.server 8000",
+    "dev": "npm run watch & npm run serve",
+    "clean": "rm -rf dist && mkdir dist"
+  },
   "dependencies": {
     "@tailwindcss/cli": "^4.1.11",
     "tailwindcss": "^4.1.11"
