--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "description": "Three Uilas - Electric Farm Utility Vehicles Website",
   "scripts": {
-    "build": "npm run build:css && npm run copy:assets && npm run copy:html",
-    "build:css": "tailwindcss -i src/index.css -o dist/index_output.css",
-    "copy:assets": "cp -r assets dist/ && cp src/script.js dist/",
-    "copy:html": "cp src/index.html dist/ && sed -i '' 's|../dist/|./|g; s|../assets/|./assets/|g' dist/index.html",
-    "watch": "tailwindcss -i src/index.css -o dist/index_output.css --watch",
+    "build": "npm run copy && npm run build:css",
+    "build:css": "tailwindcss -i src/index.css -o dist/index.css",
+    "copy": "cp -r src/ dist/",
+    "watch": "tailwindcss -i src/index.css -o dist/index.css --watch",
     "serve": "cd dist && python3 -m http.server 8000",
     "dev": "npm run watch & npm run serve",
     "stop": "pkill -f 'python3 -m http.server' || lsof -ti:8000 | xargs kill -9",
